Bug 163003 - RTF import: Frame y position wrong
Summary: RTF import: Frame y position wrong
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords:
Depends on:
Blocks: RTF-Frame
  Show dependency treegraph
 
Reported: 2024-09-17 07:42 UTC by Oliver Specht (CIB)
Modified: 2025-04-08 11:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Bugdoc (56.77 KB, application/msword)
2024-09-17 07:43 UTC, Oliver Specht (CIB)
Details
Difference between LO and Word (246.67 KB, image/jpeg)
2024-09-17 07:43 UTC, Oliver Specht (CIB)
Details
Bugdoc as docx file (20.28 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-09-17 07:45 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2024-09-17 07:42:39 UTC
Description:
Paragraphs in frames a positioned slighty different in Word than in Writer.

Steps to Reproduce:
Load the attached document. The frame in the header of page has a vertical position from top, 0,00 cm
The paragraph below is not influenced by this frame. 
In Word the frame reaches into the paragraph below and the text wraps around.


Actual Results:
The text in the paragraph is not wrapped around the frame

Expected Results:
The text should be wrapped.


Reproducible: Always


User Profile Reset: No

Additional Info:
-
Comment 1 Oliver Specht (CIB) 2024-09-17 07:43:01 UTC
Created attachment 196499 [details]
Bugdoc
Comment 2 Oliver Specht (CIB) 2024-09-17 07:43:21 UTC
Created attachment 196500 [details]
Difference between LO and Word
Comment 3 Oliver Specht (CIB) 2024-09-17 07:45:07 UTC
Created attachment 196501 [details]
Bugdoc as docx file

In docx the vertical position is saved as 1 instead of 0 and the text is wrapped in LO. Only the wrappin of the text is different from Word.
Comment 4 Commit Notification 2024-09-23 13:07:12 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1ea2bbae1aa0f0f8455039271960985292212b6a

tdf#163003 increment frame y position

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-09-25 22:38:50 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/0f01ad2805334c652545cc1ea6041c904b423a88

tdf#163003 increment frame y position

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.