tdf#163003 increment frame y position

In RTF vertical position of paragraphs in frames is handled differenty
than in docx. y position is incremented in docx. To get the same result
in RTF import the y position needs to be incremented, too.
Additionally the state of '\hyphcaps' needs to be imported to fix
the formatting of the wrapped paragraph of the bugdoc tdf#152865.

Change-Id: Ibb9851eb11a0e57ec7b9b1114264456d941cec24
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173525
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
(cherry picked from commit 1ea2bbae1aa0f0f8455039271960985292212b6a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173906
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>